# 2D-JupyterLab

./: .gitignore  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  install.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
binder/: environment.yml  postBuild
lib/: index.js
