[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "2D-JupyterLab"
description = "This is an extension for creating a 2D Jupyter Notebook within Jupyter Lab"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Timothy Wu", email = "timothywu02@gmail.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/TomWoah123/2D-JupyterLab.git"

[tool.hatch.build]
artifacts = [
    "2D-JupyterLab/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"2D-JupyterLab/labextension/static" = "share/jupyter/labextensions/2D-Jupyter/static"
"install.json" = "share/jupyter/labextensions/2D-Jupyter/install.json"
"2D-JupyterLab/labextension/package.json" = "share/jupyter/labextensions/2D-Jupyter/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "2D-JupyterLab/labextension/static/style.js",
    "2D-JupyterLab/labextension/package.json",
]
skip-if-exists = [
    "2D-JupyterLab/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "2D-JupyterLab/labextension"
source_dir = "lib"
build_cmd = "build"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml" },
    { src = "2D-JupyterLab/_version.py" },
    { src = "package.json" },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[license]
file = "LICENSE"
